<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaRegistroUsuario">

    <Button
        android:id="@+id/btnResetCreation"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="44dp"
        android:text="@string/resetRecordsRegister"
        android:onClick="resetRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailCreation" />

    <EditText
        android:id="@+id/etPassConfigCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/confirmPassRegistro"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassCreation" />

    <EditText
        android:id="@+id/etUserCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/hintRegistroUsuario"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCreation" />

    <TextView
        android:id="@+id/tvTitleCreation"
        android:layout_width="283dp"
        android:layout_height="66dp"
        android:text="@string/tituloRegistro"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/etPassCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/hintRegistroPass"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserCreation" />

    <EditText
        android:id="@+id/etEmailCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/hintEmailRegistro"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassConfigCreation" />

    <Button
        android:id="@+id/btnCrearCreation"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:text="@string/createButtonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailCreation" />

</androidx.constraintlayout.widget.ConstraintLayout>