<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaPrincipal">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="221dp"
        android:layout_height="47dp"
        android:text="Bienvenido"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:hint="Ingrese la Contraseña:"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="264dp"
        android:hint="Ingrese el Usuario:"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:flow_horizontalBias="50" />

    <Button
        android:id="@+id/btnAcceso"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/user_local"
        android:onClick="clickOption"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/add_user"
        android:onClick="clickOption"
        android:text="@string/txtBtnRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <Button
        android:id="@+id/btnAccesoLocal"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/user_local"
        android:onClick="clickOption"
        android:text="@string/btn_login_local"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

</androidx.constraintlayout.widget.ConstraintLayout>